--- a/homework03图片.html
+++ b/homework03图片.html
@@ -8,6 +8,7 @@
 				margin: 0;
 				padding: 0;
 			}
+			/* 整体界面 */
 			div{
 				width: 372px;
 				height: 232px;
@@ -17,6 +18,7 @@
 				box-sizing: border-box;
 				margin:0 auto;
 			}
+			/* 标题 */
 			h3{
 				padding-bottom: 10px;
 				margin-bottom: 10px;
@@ -24,7 +26,7 @@
 				font:18px 14px "microsoft yahei"
 				box-sizing: border-box;
 			}
-			
+			/* 文章主题设计 */
 			ul li{
 				font: 12px "microsoft yahei";
 				height: 30px;
